# RapidRAW

./: .gitignore
iced-poc/: Build and Run Release.command  Cargo.toml  README.md
iced-poc/RapidRAWIcedPOC.app/Contents/: Info.plist
iced-poc/RapidRAWIcedPOC.app/Contents/MacOS/: rapidraw-iced-poc-launcher
iced-poc/src/: main.rs  rapidraw_shader.rs
public/: splash-arctic.jpg.rrdata
src-tauri/src/: main.rs
src-tauri/src/shaders/: shader.wgsl
src/components/adjustments/: Effects.tsx
src/components/panel/right/: ControlsPanel.tsx
src/components/ui/: LUTControl.tsx
